@@ -1,5 +1,5 @@
 /*
- * Copyright © 2023 Dominic Heutelbeck (dominic@heutelbeck.com)
+ * Copyright (C) 2017-2023 Dominic Heutelbeck (dominic@heutelbeck.com)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,16 +17,15 @@ package io.sapl.prp.index.canonical.ordering;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.sapl.prp.index.canonical.Predicate;
 import io.sapl.prp.index.canonical.PredicateInfo;
 
 public class NoPredicateOrderStrategy implements PredicateOrderStrategy {
 
-	@Override
-	public List<Predicate> createPredicateOrder(Collection<PredicateInfo> predicateInfos) {
-		return predicateInfos.stream().map(PredicateInfo::getPredicate).collect(Collectors.toList());
-	}
+    @Override
+    public List<Predicate> createPredicateOrder(Collection<PredicateInfo> predicateInfos) {
+        return predicateInfos.stream().map(PredicateInfo::getPredicate).toList();
+    }
 
 }
